created a flexContainer component, which makes it easier to create and configure flexbox container, we can use this build other components, we should update and refactor this component when we need to

--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@storybook/addon-measure": "^6.5.16"
+  }
 }
