downloaded some dependencies

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0"
+  },
+  "dependencies": {
+    "canvas-gauges": "^2.1.7"
   }
 }
