--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "babel-loader": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "storybook": "^7.0.2"
   },
   "dependencies": {
     "canvas-gauges": "^2.1.7"
